--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 #
 #    pip-compile requirements.in
 #
--e git+git://github.com/fecgov/regulations-site@a11a00fe7e3d8e953220cbdad977375a6929e02d#egg=regulations  # via -r requirements.in
+-e git+https://github.com/fecgov/fec-eregs.git@master#egg=fec_regparser&subdirectory=eregs_extensions  # via -r requirements.in
+-e git+https://github.com/fecgov/regulations-site@a11a00fe7e3d8e953220cbdad977375a6929e02d#egg=regulations  # via -r requirements.in
 amqp==2.5.2               # via -r requirements.in, kombu
 anyjson==0.3.3            # via -r requirements.in
 appnope==0.1.0            # via -r requirements.in, ipython
@@ -95,7 +96,8 @@ traitlets==4.3.3          # via -r requirements.in, ipython
 urllib3==1.24.3           # via -r requirements.in, elasticsearch, pyelasticsearch, requests
 vine==1.3.0               # via -r requirements.in, amqp
 wcwidth==0.1.9            # via -r requirements.in, prompt-toolkit
-webargs==5.5.3            # via -r requirements.in, regcore
+webargs==6.0.0            # via regcore
+wheel==0.34.2             # via -r requirements.in
 whitenoise==3.3.1         # via -r requirements.in
 zipp==3.1.0               # via -r requirements.in, importlib-metadata
 
