--- a/requirements-parsing.txt
+++ b/requirements-parsing.txt
@@ -14,20 +14,20 @@ cached-property==1.3.1
 celery==4.1.0
 certifi==2018.1.18
 cfenv==0.5.3
-cffi==1.11.5
+cffi==1.12
 chardet==3.0.4
 click==6.7
 coloredlogs==9.0
-cryptography==3.2
+cryptography==3.3.2
 decorator==4.2.1
 dj-database-url==0.4.2
-django==3.1.14
+django==3.2.10
 django-click==2.0.0
 django-haystack==3.1.1
 django-js-asset==1.0.0
 django-mptt==0.13.4
 django-rq==2.5.1
-djangorestframework==3.7.7
+djangorestframework==3.11.2
 docutils==0.14
 elasticsearch==1.9.0
 enum34==1.1.6
@@ -37,7 +37,7 @@ gitdb2==2.0.3
 GitPython==2.1.8
 gevent==1.4.0
 greenlet==0.4.16 # pinned to fix build problem (parent is gevent)
-gunicorn==19.7.1
+gunicorn==19.10.0
 humanfriendly==4.9
 idna==2.6
 inflection==0.3.1
@@ -50,7 +50,7 @@ jmespath==0.9.3
 json-delta==2.0
 jsonschema==2.5.1
 kombu==4.1.0
-lxml==4.6.2
+lxml==4.6.5
 marshmallow==2.19.2
 networkx==2.1
 newrelic==2.100.0.84
@@ -66,20 +66,20 @@ pycparser==2.18
 pyelasticsearch==1.4
 Pygments==2.7.4
 pyOpenSSL==17.5.0
-pyparsing==2.2.0
+pyparsing==2.2.1
 python-constraint==1.3.1
-python-dateutil==2.7.2
+python-dateutil==2.7.3
 pytz==2018.3
 PyYAML==5.4
 redis==3.1.0
 # regparser
--e git+https://github.com/fecgov/regulations-parser.git@pkfec-django3-parser#egg=regparser
+-e git+https://github.com/fecgov/regulations-parser.git@master#egg=regparser
 
 # regsite
--e git+git://github.com/fecgov/regulations-site@pkfec-django3-site#egg=regulations
+-e git+git://github.com/fecgov/regulations-site@master#egg=regulations
 
 # regcore
--e git+git://github.com/fecgov/regulations-core@pkfec-upgrade-django3-core#egg=regcore
+-e git+git://github.com/fecgov/regulations-core@master#egg=regcore
 requests==2.25.1
 requests-cache==0.4.13
 requests-toolbelt==0.8.0
